--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 weather_api_key.py
 random_numbers.ipynb
 API_practice.ipynb
+config_gkey4.py
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
